--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ url: ''
 baseurl: 
 
 # Title of the Site
-title: Personal page - Vivien Londe
+title: "Vivien Londe : personal page"
 # Description of the Site
 description: # A customizable Jekyll portfolio theme
 # URL of Image of the Site
@@ -36,7 +36,7 @@ github_username:  vivienlonde
 # spotify_username: /
 
 # Google Analytics
-google-analytics: UA-163806439-1
+# google-analytics: UA-163806439-1
 
 # Disqus
 # disqus-shortname: thedevslot
@@ -44,11 +44,11 @@ google-analytics: UA-163806439-1
 # Name of the Author
 author-name: Vivien Londe
 # URL for the Image of the Author
-author-image: assets/images/photo_de_profil.jpg # https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png
+author-image: /assets/images/photo_de_profil.jpg # https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png
 # 60 Words About the Author
 author-about: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eget pharetra velit, dapibus bibendum ex. Maecenas vitae laoreet mauris, ac luctus metus. Aliquam luctus velit vel ipsum feugiat, vel venenatis mauris hendrerit. Sed at vulputate sapien, eget vehicula dolor. Aliquam volutpat pulvinar neque sit amet sodales.
 # URL to the Author's Profile (i.e., Github, Twitter, Stackoverflow, etc)
-author-url: https://github.com/thedevslot
+author-url: https://www.linkedin.com/in/vivien-londe
 
 # SASS
 sass:
