--- a/_config.yml
+++ b/_config.yml
@@ -13,23 +13,22 @@ description: # A customizable Jekyll portfolio theme
 # URL of Image of the Site
 site-image: /assets/images/meta.jpg
 # Keywords of the Site
-site-keywords: Site, Template, Theme
+site-keywords: Vivien, Londe, Quantum, Quantum Computing
 # URL for the Image of custom Favicon
 favicon-url: 
 
 # URL of the Image of Custom Hero Image (i.e., the image in the background of the very first section of the Homepage)
-# heroimage: https://i.postimg.cc/cHPZ0Pjx/canoe.jpg
 heroimage: /assets/images/canoe.JPG 
 
 # Social Media and Contact
 # If you don't want to use any icon, you can leave them blank.
 email: vivien.londe@microsoft.com
-# facebook_username: thedevslot
-twitter_username: vivien_londe
-# instagram_username: thedevslot
-linkedin_username: vivien-londe
 github_username:  vivienlonde
+linkedin_username: vivien-londe
+twitter_username: vivien_londe
 # youtube_channel_id: UCk_93NXYP-U_AOB5GfWlOow
+# facebook_username: thedevslot
+# instagram_username: thedevslot
 # reddit_username: /
 # behance_username: /
 # dribbble_username: /
@@ -44,7 +43,7 @@ github_username:  vivienlonde
 # Name of the Author
 author-name: Vivien Londe
 # URL for the Image of the Author
-author-image: /assets/images/photo_de_profil.jpg # https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png
+author-image: /assets/images/photo_de_profil.jpg 
 # 60 Words About the Author
 author-about: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eget pharetra velit, dapibus bibendum ex. Maecenas vitae laoreet mauris, ac luctus metus. Aliquam luctus velit vel ipsum feugiat, vel venenatis mauris hendrerit. Sed at vulputate sapien, eget vehicula dolor. Aliquam volutpat pulvinar neque sit amet sodales.
 # URL to the Author's Profile (i.e., Github, Twitter, Stackoverflow, etc)
