--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,14 @@ author-name: Vivien Londe
 # URL for the Image of the Author
 author-image: /assets/images/photo_de_profil.jpg 
 # 60 Words About the Author
-author-about: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eget pharetra velit, dapibus bibendum ex. Maecenas vitae laoreet mauris, ac luctus metus. Aliquam luctus velit vel ipsum feugiat, vel venenatis mauris hendrerit. Sed at vulputate sapien, eget vehicula dolor. Aliquam volutpat pulvinar neque sit amet sodales.
+author-about: >
+  I am a Quantum Computer specialist.
+  My interests in this field are foremost in quantum algorithms and quantum programming languages.
+  I try to understand and to explain the quantum computing stack from low level algorithms up to roadmaps for industrial applications.
+  In my blog I focus on quantum algorithms.
+  Previously I did my Phd on Quantum Error Correction under the supervision of Anthony Leverrier and Gilles Zémor.
+  Apart from that I enjoy swimming, canoeing and hiking. 
+
 # URL to the Author's Profile (i.e., Github, Twitter, Stackoverflow, etc)
 author-url: https://www.linkedin.com/in/vivien-londe
 
