changed my description

--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ author-about: >
   I am a Quantum Computer specialist.
   My interests in this field are foremost in quantum algorithms and quantum programming languages.
   I try to understand and to explain the quantum computing stack from low level algorithms up to roadmaps for industrial applications.
-  In my blog I focus on quantum algorithms.
+  In my blog in french I focus on quantum algorithms.
   Previously I did my Phd on Quantum Error Correction under the supervision of Anthony Leverrier and Gilles Zémor.
   Apart from that I enjoy swimming, canoeing and hiking. 
 
