--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ author-image: /assets/images/photo_de_profil.jpg
 author-about: >
   I am a Quantum Computer specialist.
   My interests in this field are foremost in quantum algorithms and quantum programming languages.
-  I try to understand and to explain the quantum computing stack from low level algorithms up to roadmaps for industrial applications.
+  I try to understand and explain the quantum computing stack from low level algorithms up to roadmaps for industrial applications.
   In my blog in French I focus on quantum algorithms.
   Previously I did my Phd on Quantum Error Correction under the supervision of Anthony Leverrier and Gilles Zémor.
   Apart from that I enjoy swimming, canoeing and hiking. 
