--- a/_config.yml
+++ b/_config.yml
@@ -54,7 +54,8 @@ author-about: >
   Apart from that I enjoy swimming, canoeing and hiking. 
 
 # URL to the Author's Profile (i.e., Github, Twitter, Stackoverflow, etc)
-author-url: https://www.linkedin.com/in/vivien-londe
+author-url: https://vivienlonde.github.io/blog
+
 
 # SASS
 sass:
