--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ url: ''
 baseurl: 
 
 # Title of the Site
-title: "Vivien Londe : personal page"
+title: "Vivien Londe : Quantum Computing"
 # Description of the Site
 description: # A customizable Jekyll portfolio theme
 # URL of Image of the Site
