--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ author-name: Vivien Londe
 author-image: /assets/images/photo_de_profil.jpg 
 # 60 Words About the Author
 author-about: >
-  I am a Quantum Computer specialist.
+  I am a Quantum Computing specialist.
   My interests in this field are foremost in quantum algorithms and quantum programming languages.
   I try to understand and explain the quantum computing stack from low level algorithms up to roadmaps for industrial applications.
   In my blog in French I focus on quantum algorithms.
