change contact info

--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ heroimage: /assets/images/canoe.JPG
 
 # Social Media and Contact
 # If you don't want to use any icon, you can leave them blank.
-email: vivien.londe@microsoft.com
+email: # vivien.londe@microsoft.com
 github_username:  vivienlonde
 linkedin_username: vivien-londe
 twitter_username: vivien_londe
